<resources>
    <string name="app_name">Recursos Nativos</string>
    <string name="agenda">Agenda</string>
    <string name="contatos">Recurso de Contatos</string>
    <string name="fotos">Recurso de Biblioteca de Fotos</string>
    <string name="camera">Recurso de Câmera</string>
    <string name="localizacao">Recurso de Localização</string>
    <string name="evento">Pegar Evento</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="content_usuario">Imagem a ser selecionada pelo usuário</string>
    <string name="mensagem_button">Selecione uma imagem</string>
    <string name="mensagem_camera">Tirar uma foto</string>
    <string name="title_activity_maps">Map</string>
</resources>